2010-10-27  Bob Halley  <halley@dnspython.org>

	* Incorporate a patch to use poll() instead of select() by
	  default on platforms which support it.  Thanks to
	  Peter Schüller and Spotify for the contribution.

2010-10-17  Bob Halley  <halley@dnspython.org>

	* Python prior to 2.5.2 doesn't compute the correct values for
	  HMAC-SHA384 and HMAC-SHA512.  We now detect attempts to use
	  them and raise NotImplemented if the Python version is too old.
	  Thanks to Kevin Chen for reporting the problem.

	* Various routines that took the string forms of rdata types and
	  classes did not permit the strings to be Unicode strings.
	  Thanks to Ryan Workman for reporting the issue.

	* dns/tsig.py: Added symbolic constants for the algorithm strings.
	  E.g. you can now say dns.tsig.HMAC_MD5 instead of
	  "HMAC-MD5.SIG-ALG.REG.INT".  Thanks to Cillian Sharkey for
	  suggesting this improvement.

	* dns/tsig.py (get_algorithm): fix hashlib compatibility; thanks to
	  Kevin Chen for the patch.

	* dns/dnssec.py: Added key_id() and make_ds().

	* dns/message.py: message.py needs to import dns.edns since it uses
	  it.

2010-05-04  Bob Halley  <halley@dnspython.org>

	* dns/rrset.py (RRset.__init__): "covers" was not passed to the
	  superclass __init__().  Thanks to Shanmuga Rajan for reporting
	  the problem.

2010-03-10  Bob Halley  <halley@dnspython.org>

	* The TSIG algorithm value was passed to use_tsig() incorrectly
	  in some cases.  Thanks to 'ducciovigolo' for reporting the problem.

2010-01-26  Bob Halley  <halley@dnspython.org>

	* (Version 1.8.0 released)

2010-01-13  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py: Added RSASHA256 and RSASHA512 codepoints; added
	  other missing codepoints to _algorithm_by_text.

2010-01-12  Bob Halley  <halley@dnspython.org>

	* Escapes in masterfiles now work correctly.  Previously they were
	  only working correctly when the text involved was part of a domain
	  name.
